--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ tokio = { version = "1.40.0", features = ["full"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 regex = "1.10.6"
+log = "0.4"
+env_logger = "0.10"
